# fabric-workspace-deployment

./: .gitignore  .npmrc.tmpl  .pypirc  README.md  fabric-workspace-deployment.spec  hello-world-app.spec  nx  nx.json  package-lock.json  package.json  project.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
contrib/: README.md  bootstrap-dev-env.ps1  bootstrap-dev-env.sh  publish.sh
docs/: LOGGING.md
src/fabric_workspace_deployment/: __about__.py  logging_config.py  main.py
src/fabric_workspace_deployment/client/: fabric_artifact.py  fabric_folder.py  fabric_mwc_token_client.py  fabric_pipeline.py  fabric_pipeline_run.py  fabric_spark_environment.py  fabric_spark_job_definition.py  folder.py
src/fabric_workspace_deployment/factories/: management_factory.py
src/fabric_workspace_deployment/identity/: token_credential.py
src/fabric_workspace_deployment/manager/azure/: cli.py  rbac.py  storage.py
src/fabric_workspace_deployment/manager/fabric/: __init__.py  capacity.py  cicd.py  cli.py  contacts.py  model.py  monitoring.py  rbac.py  seed.py  shortcut.py  spark.py  workspace.py
src/fabric_workspace_deployment/operations/: operation_interfaces.py  operators.py
src/fabric_workspace_deployment/static/: transformers.py
src/hello_world_app/: __about__.py  __init__.py  main.py
tests/: __init__.py  test_logging_config.py
